--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-permissions": "^4.1.5",
     "react-native-picker-select": "^9.3.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
