ios calendar fix

--- a/ios/MyCruiseCalApp/Info.plist
+++ b/ios/MyCruiseCalApp/Info.plist
@@ -4,8 +4,6 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
-	<key>NSCalendarsUsageDescription</key>
-	<string>We need access to your calendar to add cruise itinerary events.</string>
 	<key>CFBundleDisplayName</key>
 	<string>MyCruiseCalApp</string>
 	<key>CFBundleExecutable</key>
@@ -26,29 +24,34 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCalendarsFullAccessUsageDescription</key>
+<string>App needs calendar access to add cruise events.</string>
+
 	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<false/>
-		<key>NSAllowsLocalNetworking</key>
-		<true/>
-	</dict>
+<dict>
+    <!-- Allow all HTTP loads (for development) -->
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
+    
+    <!-- OR fine-grained rule (safer, for your specific domain) -->
+    <key>NSExceptionDomains</key>
+    <dict>
+        <key>cruisecal.blackbullsolution.com</key>
+        <dict>
+            <key>NSIncludesSubdomains</key>
+            <true/>
+            <key>NSExceptionAllowsInsecureHTTPLoads</key>
+            <true/>
+            <key>NSExceptionRequiresForwardSecrecy</key>
+            <false/>
+        </dict>
+    </dict>
+</dict>
+
+	<key>NSCalendarsUsageDescription</key>
+	<string>We need access to your calendar to add cruise itinerary events.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>arm64</string>
-	</array>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<string></string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>poppins-latin-100-italic.ttf</string>
@@ -88,5 +91,19 @@
 		<string>poppins-latin-ext-900-italic.ttf</string>
 		<string>poppins-latin-ext-900-normal.ttf</string>
 	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<string>arm64</string>
+	</array>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
