--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,6 +29,8 @@ use_frameworks! :linkage => :static
 target 'MyCruiseCalApp' do
   config = use_native_modules!
 
+  # ✅ Explicit Hermes pod declaration
+
   use_react_native!(
     :path => config[:reactNativePath],
     :app_path => "#{Pod::Config.instance.installation_root}/.."
@@ -44,10 +46,13 @@ target 'MyCruiseCalApp' do
       config[:reactNativePath],
       :mac_catalyst_enabled => false
     )
+
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
         config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
         config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
+        config.build_settings['DEBUG_INFORMATION_FORMAT'] = 'dwarf-with-dsym' # ✅ Required for dSYM
+        config.build_settings['ENABLE_BITCODE'] = 'NO' # ✅ Hermes does not support Bitcode
       end
     end
   end
